First version of portfolio

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Nicola Gaeta - Portfolio</title>
-    <link rel="shortcut icon" type="image/ico" href="portfolio.ico">
+    <link rel="shortcut icon" type="image/ico" href="./index_files/portfolio.ico">
     <link rel="stylesheet" type="text/css" href="./index_files/layout.css">
     </script>
 </head>
@@ -21,11 +21,14 @@
             <p id="subtitle" class="code-font"> VIDEOGAME AND SOFTWARE DEVELOPER</p>                    
 			<p  lass="code-font"> <span id="email"> nicgae93@gmail.com </span>
 				<span class="hidden"> "" </span>
-				<a href="https://github.com/ngaeta" target="_blank">
+				<a href="https://github.com/ngaeta" target="_blank" title="Go to Github portfolio">
 					<img src="./index_files/git.png" class="social_ico">
                 </a>
-                <a href="https://www.linkedin.com/in/nicola-gaeta-452872a5/" target="_blank">
+                <a href="https://www.linkedin.com/in/nicola-gaeta-452872a5/" target="_blank" title="Go to LinkeldIn">
                     <img src="./index_files/linkedin.png" class="social_ico">
+                </a> 
+				<a href="./index_files/Portfolio_GaetaNicola.pdf" download target="_blank" title="Download PDF version">
+                    <img src="./index_files/pdf_icon.png" class="social_ico">
                 </a> 
 			</p>
         </div>
@@ -34,115 +37,171 @@
 
 <div class="portfolio_item"> 
     <img src="./index_files/Hunedoara.jpg">    
-    <a href="http://www.ignitionpublishing.com/thegame/hunedoara/" target="_blank"> 
-		<h2>HUNEDOARA</h2> 
-	</a>
+	<h2>HUNEDOARA</h2> 
 	<p></p>
      <p>
 		Hunedoara is a story-driven horror game developed in UE4. I am working on the game together with a small team for AIV and Ignition Publishing. Mainly I am working as an AI programmer and as a physics programmer using the UE4 physics engine. I also made two shaders using the Unreal Engine material system. The game will be released on PC and consoles.
     </p>   
+	<div class="portfolio_link_l">
+		<a href="http://www.ignitionpublishing.com/thegame/hunedoara/" target="_blank" title="Go to site">
+			 <img src="./index_files/web.png" class="social_ico">
+		</a> 
+		<a href="https://www.youtube.com/watch?v=S0HKcxwLtCI" target="_blank" title="Go to video">
+			<img src="./index_files/youtube.png" class="social_ico">
+		</a>
+	</div>
 </div>
 
 <div class="portfolio_item"> 
     <img src="./index_files/TheAncientLabyrinth.jpg">    
-    <a href="https://store.steampowered.com/app/1150400/The_Ancient_Labyrinth/" target="_blank"> 
-		<h2>THE ANCIENT LABYRINTH</h2> 
-	</a>
+	<h2>THE ANCIENT LABYRINTH</h2> 
 	<p></p>
      <p>
 	 The Ancient Labyrinth is a first-person stealth horror game I developed in Unity. It was released on Steam on September 25, 2019. The main purpose of the game is to explore an ancient Egyptian labyrinth trying to find a way out by solving puzzles and trying to survive a monster that wanders in the labyrinth. The monster can't be killed, the only possibility for the player is to hide using the surrounding environment.
     </p>   
+	<div class="portfolio_link_r">
+		<a href="https://store.steampowered.com/app/1150400/The_Ancient_Labyrinth/" target="_blank" title="Go to Steam">
+			 <img src="./index_files/steam.png" class="social_ico">
+		</a> 
+		<a href="https://github.com/ngaeta/The-Ancient-Labyrinth" target="_blank" title="Go to repository">
+			<img src="./index_files/git.png" class="social_ico">
+		</a>  
+	</div>
 </div>
 
 <div class="portfolio_item"> 
     <img src="./index_files/DonkeyKong.png">    
-    <a href="https://github.com/ngaeta/Donkey-Kong-CPP-" target="_blank"> 
-		<h2>DONKEY KONG C++ </h2> 
-	</a>
+	<h2>DONKEY KONG C++ </h2> 
 	<p></p>
      <p>
 	 Donkey Kong C++ is a small personal project based on the original Donkey Kong game released in 1981. It was written in C++ using smart pointers and a simple object pool based on template. The player can jump and climb on the ladders to avoid the barrels. I used the SDL library for rendering.
     </p>   
+	<div class="portfolio_link_l">
+		<a href="https://github.com/ngaeta/Donkey-Kong-CPP-" target="_blank" title="Go to repository">
+			 <img src="./index_files/git.png" class="social_ico">
+		</a> 
+		<a href="https://youtu.be/_Fgp9DIq6dc" target="_blank" title="Go to video">
+			<img src="./index_files/youtube.png" class="social_ico">
+		</a>  
+	</div>
 </div>
 
 <div class="portfolio_item"> 
     <img src="./index_files/MortalKombat.png">    
-    <a href="https://github.com/ngaeta/Mortal-Kombat-C" target="_blank"> 
-		<h2> MORTAL KOMBAT C </h2> 
-	</a>
+	<h2> MORTAL KOMBAT C </h2> 
 	<p></p>
      <p>
 		It&#39;s a small personal project based on the famous video game. It was written in C using the SDL library for rendering. The game was developed in a short time, so there are no more complex features like combos. Players can fight with kicks and punches and they can perform fatalities.
-    </p>   
+    </p>  
+	<div class="portfolio_link_r">
+		<a href="https://github.com/ngaeta/Mortal-Kombat-C" target="_blank" title="Go to repository">
+			 <img src="./index_files/git.png" class="social_ico">
+		</a> 
+		<a href="https://www.youtube.com/watch?v=CBcC8bPsrLQ" target="_blank" title="Go to video">
+			<img src="./index_files/youtube.png" class="social_ico">
+		</a>  
+	</div>
 </div>
-
 
 
 <div class="portfolio_item"> 
     <img src="./index_files/NotBomberman.PNG">    
-    <a href="https://github.com/ngaeta/NotBomberman" target="_blank"> 
 		<h2>NOT BOMBERMAN</h2> 
-	</a>
 	<p></p>
      <p>
 	 It is an online multiplayer game based on the famous arcade videogame. It was developed with Unity, together with two friends, for a project in the second year of the videogame programming course. It's a deathmatch where players can drop bombs to eliminate the other ones. The server was written in Python, the client in C#.
     </p>   
+	<div class="portfolio_link_l" style="margin-left: 100px;">
+		<a href="https://github.com/ngaeta/NotBomberman" target="_blank" title="Go to repository">
+			 <img src="./index_files/git.png" class="social_ico">
+		</a> 
+	</div>
 </div>
 
 
 <div class="portfolio_item"> 
     <img src="./index_files/CrashBandicoot.png">    
-    <a href="https://github.com/ngaeta/Crash-Bandicoot-2D" target="_blank"> 
 	<h2>CRASH BANDICOOT 2D </h2> 
-	</a>
 	<p></p>
      <p>
-	 It’s a personal project based on Naughty Dog’s game. I developed it during my first year of videogame programming course. It was developed entirely in C# using programming techniques I was studing that year, for example raycast and FSM. The entire game level was made with Tiled and imported into Visual Studio using XML.
+	 It&#39;s a personal project based on Naughty Dog&#39;s game. I developed it during my first year of videogame programming course. It was developed entirely in C# using programming techniques I was studing that year, for example raycast and FSM. The entire game level was made with Tiled and imported into Visual Studio using XML.
     </p>   
+	<div class="portfolio_link_r">
+		<a href="https://github.com/ngaeta/Crash-Bandicoot-2D" target="_bla_nk" title="Go to repository">
+			 <img src="./index_files/git.png" class="social_ico">
+		</a> 
+		<a href="https://youtu.be/xb2RcWdNFjo" target="_blank" title="Go to video">
+			<img src="./index_files/youtube.png" class="social_ico">
+		</a>  
+	</div>
 </div>
 
 <div class="portfolio_item"> 
     <img src="./index_files/Bomberman.png">    
-    <a href="https://github.com/ngaeta/Bomberman" target="_blank"> 
 	<h2>BOMBERMAN 2D</h2> 
-	</a>
 	<p></p>
      <p>
 	Bomberman 2D is a personal project based on the famous arcade videogame. It was developed entirely in C# using videogame programming techniques acquired during my first year in AIV (Italian Videogame Academy). The map is created randomly when the game starts, while only the players position is fixed.
     </p>  
+	<div class="portfolio_link_l">
+		<a href="https://github.com/ngaeta/Bomberman" target="_bla_nk" title="Go to repository">
+			 <img src="./index_files/git.png" class="social_ico">
+		</a> 
+		<a href="https://www.youtube.com/watch?v=_6qub6jVvDI" target="_blank" title="Go to video">
+			<img src="./index_files/youtube.png" class="social_ico">
+		</a>  
+	</div>
 </div>
 
 <div class="portfolio_item"> 
     <img src="./index_files/LeapMotionEscapeRoom.png">    
-    <a href="https://github.com/ngaeta/LeapMotionEscapeRoomUnity" target="_blank"> 
 		<h2>LEAP MOTION ESCAPE ROOM </h2> 
-	</a>
 	<p></p>
      <p>
-	 It's the project I developed for my degree thesis. It's an “escape room” style videogame developed with Unity. The goal was to show a use of the Leap Motion device as the only input for the whole level. The goal of the game is to get out of the room by interacting with the objects in the scene using your own hands rendered in game by Leap Motion device
+	 It&#39;s the project I developed for my degree thesis. It&#39;s an Escape Room style videogame developed with Unity. The goal was to show a use of the Leap Motion device as the only input for the whole level. The goal of the game is to get out of the room by interacting with the objects in the scene using your own hands rendered in game by Leap Motion device
     </p>   
+	<div class="portfolio_link_r">
+		<a href="https://github.com/ngaeta/LeapMotionEscapeRoomUnity" target="_blank" title="Go to repository">
+			 <img src="./index_files/git.png" class="social_ico">
+		</a> 
+		<a href="https://youtu.be/n_aA3CGS6EU" target="_blank" title="Go to video">
+			<img src="./index_files/youtube.png" class="social_ico">
+		</a>  
+	</div>
 </div>
 
 <div class="portfolio_item"> 
     <img src="./index_files/ZombieShooter.png">    
-    <a href="https://github.com/ngaeta/Simple-zombie-shooter" target="_blank"> 
 		<h2> SIMPLE ZOMBIE SHOOTER 2D </h2> 
-	</a>
 	<p></p>
      <p>
-		It’s a small 2D videogame developed in Python using the PyGame library. It is essentially an infinite shooter whose purpose is to shoot zombies.
+		It&#39;s a small 2D videogame developed in Python using the PyGame library. It is essentially an infinite shooter whose purpose is to shoot zombies.
 	</p>   
+	<div class="portfolio_link_l">
+		<a href="https://github.com/ngaeta/Simple-zombie-shooter" target="_blank" title="Go to repository">
+			 <img src="./index_files/git.png" class="social_ico">
+		</a> 
+		<a href="https://youtu.be/FSlF1KyZq7o" target="_blank" title="Go to video">
+			<img src="./index_files/youtube.png" class="social_ico">
+		</a>  
+	</div>
 </div>
 
 <div class="portfolio_item"> 
     <img src="./index_files/LunarLand.png">    
-    <a href="https://github.com/ngaeta/Lunar-Land" target="_blank"> 
 		<h2>LUNAR LAND </h2> 
-	</a>
 	<p></p>
      <p>
 		Lunar Land is a very small project developed as a mid-year exercise for the first year of videogame programming course in AIV. It was developed using only C#. The map is created randomly each time the game starts, taking care to leave the space necessary for the spacecraft to pass among the asteroids and reach the final goal.
 	</p>  
+	<div class="portfolio_link_r">
+		<a href="https://github.com/ngaeta/Lunar-Land" target="_blank" title="Go to repository">
+			 <img src="./index_files/git.png" class="social_ico">
+		</a> 
+		<a href="https://youtu.be/Y572m7SJz3A" target="_blank" title="Go to video">
+			<img src="./index_files/youtube.png" class="social_ico">
+		</a>  
+	</div>
 </div>
 
 </div>
