--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		<h2>LEAP MOTION ESCAPE ROOM </h2> 
 	<p></p>
      <p>
-	 It&#39;s the project I developed for my degree thesis. It&#39;s an Escape Room style videogame developed with Unity. The goal was to show a use of the Leap Motion device as the only input for the whole level. The goal of the game is to get out of the room by interacting with the objects in the scene using your own hands rendered in game by Leap Motion device
+	 It&#39;s the project I developed for my degree thesis. It&#39;s an Escape Room style videogame developed with Unity. The goal was to show a use of the Leap Motion device as the only input for the whole level. The goal of the game is to get out of the room by interacting with the objects in the scene using your own hands rendered in game by Leap Motion device.
     </p>   
 	<div class="portfolio_link_r">
 		<a href="https://github.com/ngaeta/LeapMotionEscapeRoomUnity" target="_blank" title="Go to repository">
